force-app/main/default/objects/Campaign/fields/Enable_Payment_Requests__c.field-meta.xml
<CustomField>
    <fullName>Enable_Payment_Requests__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Incentive Type Campaigns, indicates if Payment Requests should be created automatically when new Campaign Levels are achieved for Campaign Members.</description>
    <inlineHelpText>For Incentive Type Campaigns, indicates if Payment Requests should be created automatically when new Campaign Levels are achieved for Campaign Members.</inlineHelpText>
    <label>Enable Payment Requests</label>
    <type>Checkbox</type>
</CustomField>