force-app/main/default/objects/Campaign/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Used namely for Marketing Cloud to ensure correct Campaign alignment.</description>
    <externalId>true</externalId>
    <inlineHelpText>Used namely for Marketing Cloud to ensure correct Campaign alignment.</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>