force-app/main/default/objects/Campaign/fields/Member_Incentive_Life_Days__c.field-meta.xml
<CustomField>
    <fullName>Member_Incentive_Life_Days__c</fullName>
    <description>Indicates the numbers of days since joining the Campaign that the member is eligible for the incentive.</description>
    <inlineHelpText>Indicates the numbers of days since joining the Campaign that the member is eligible for the incentive.</inlineHelpText>
    <label>Member Incentive Life (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>